# minreq-async

./: Cargo.toml
.github/workflows/: lint.yml
examples/: hello.rs  iterator.rs
src/: connection.rs  error.rs  lib.rs  request.rs  response.rs
src/connection/: native_tls_stream.rs  openssl_stream.rs  rustls_stream.rs
tests/: main.rs  setup.rs
