[package]
name = "minreq"
version = "2.14.2-alpha"
authors = ["Jens Pitkanen <jens@neon.moe>"]
description = "Simple, minimal-dependency HTTP client"
documentation = "https://docs.rs/minreq"
homepage = "https://github.com/neonmoe/minreq"
repository = "https://github.com/neonmoe/minreq"
readme = "README.md"
keywords = ["http", "https", "client", "request", "json"]
categories = ["web-programming::http-client"]
license = "ISC"
edition = "2018"

[badges]
travis-ci = { repository = "neonmoe/minreq" }
maintenance = { status = "passively-maintained" }

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = [
    "io-util",
    "net",
    "time",
] }
# For the urlencoding feature:
urlencoding = { version = "2.1.0", optional = true }
# For the tracing feature:
tracing = { version = "0.1.44", default-features = false, optional = true }
# For the punycode feature:
punycode = { version = "0.4.1", optional = true }
# For the json-using-serde feature:
serde = { version = "1.0.101", optional = true }
serde_json = { version = "1.0.0", optional = true }
# For the proxy feature:
base64 = { version = "0.22", optional = true }
# For the https features:
## https-rustls
tokio-rustls = { version = "0.26", optional = true }
webpki-roots = { version = "1.0", optional = true }
rustls-platform-verifier = { version = "0.6.2", optional = true }
## https-bundled
tokio-openssl = { version = "0.6.5", optional = true }
openssl = { version = "0.10.29", optional = true }
openssl-probe = { version = "0.1", optional = true }
## https-native
tokio-native-tls = { version = "0.3.1", optional = true }

[dev-dependencies]
tiny_http = "0.12"
chrono = "0.4.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["io"] }

[package.metadata.docs.rs]
features = ["json-using-serde", "proxy", "https", "punycode"]

[features]
https = ["https-rustls"]
https-rustls = ["tokio-rustls", "webpki-roots"]
https-rustls-probe = ["tokio-rustls", "rustls-platform-verifier"]
https-bundled = ["openssl/vendored", "tokio-openssl"]
https-bundled-probe = ["https-bundled", "openssl-probe"]
https-native = ["tokio-native-tls"]
json-using-serde = ["serde", "serde_json"]
proxy = ["base64"]

[[example]]
name = "hello"

[[example]]
name = "iterator"

[[example]]
name = "json"
required-features = ["json-using-serde"]

# vim: ft=conf
